--- a/confluent-aws/node-confluent.yaml
+++ b/confluent-aws/node-confluent.yaml
@@ -145,7 +145,7 @@ Parameters:
     ConstraintDescription: Quick Start bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
       (-).
-    Default: quickstart-reference
+    Default: truce-infra
     Description: S3 bucket name for the Quick Start assets. Quick Start bucket name
       can include numbers, lowercase letters, uppercase letters, and hyphens (-).
       It cannot start or end with a hyphen (-).
@@ -154,7 +154,7 @@ Parameters:
     AllowedPattern: "^[0-9a-zA-Z-/]*$"
     ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
       uppercase letters, hyphens (-), and forward slash (/).
-    Default: confluent/kafka/latest/
+    Default: confluent
     Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
       can include numbers, lowercase letters, uppercase letters, hyphens (-), and
       forward slash (/).
@@ -297,76 +297,76 @@ Resources:
           files:
             "/tmp/sbin/compute-heap-opts":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/compute-heap-opts
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/compute-heap-opts
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/cp-deploy.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/cp-deploy.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/cp-deploy.sh
               mode: '000755'
               owner: root
               group: root
             "/tmp/sbin/cp-install.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/cp-install.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/cp-install.sh
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/cp-retrieve-connect-jars.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/cp-retrieve-connect-jars.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/cp-retrieve-connect-jars.sh
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/cp-retrieve-scripts.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/cp-retrieve-scripts.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/cp-retrieve-scripts.sh
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/gen-cluster-hosts.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/gen-cluster-hosts.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/gen-cluster-hosts.sh
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/prep-cp-instance.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/prep-cp-instance.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/prep-cp-instance.sh
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/prepare-disks.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/prepare-disks.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/prepare-disks.sh
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/post-cp-info.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/post-cp-info.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/post-cp-info.sh
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/wait-for-child-resource.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/wait-for-child-resource.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/wait-for-child-resource.sh
               mode: '000755'
               owner: root
               group: root
               authentication: S3AccessCreds
             "/tmp/sbin/wait-for-resource.sh":
               source:
-                Fn::Sub: https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}scripts/wait-for-resource.sh
+                Fn::Sub: https://s3-us-west-2.amazonaws.com/${QSS3BucketName}/${QSS3KeyPrefix}scripts/wait-for-resource.sh
               mode: '000755'
               owner: root
               group: root
